--- a/index.html
+++ b/index.html
@@ -8,26 +8,48 @@
   <title></title>
   <meta name="description" content="">
   <meta name="author" content="">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="shortcut icon" href="/favicon.ico">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-  <link rel="stylesheet" href="css/style.css?v=2">
+  <link rel="stylesheet" href="css/styles.css">
 
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 </head>
 <body>
-  <script type="text/x-handlebars">
-    {{#view App.MyView}}
-      <h1>Hello world!</h1>
-    {{/view}}
-  </script>
+    <script type="text/x-handlebars">
+        <div id="frm">
+            <b>Load Tweets for: </b>
+            {{view App.SearchTextField placeholder="Twitter username" valueBinding="App.tweetsController.username"}}
+            <button {{action "loadTweets" target="App.tweetsController"}}>Go!</button>
+        </div>
+        <div id="content">
+            <div id="recent">
+                <h3>Recent Users</h3>
+                <ol>
+                    {{#each App.recentUsersController.reverse}}
+                        <li>
+                            <a href="#" title="view again" {{action "searchAgain" this target="App.recentUsersController"}}>{{this}}</a> - 
+                            <a href="#" title="remove" {{action "removeUser" this target="App.recentUsersController"}}>X</a>
+                        </li>
+                    {{/each}}
+                </ol>
+            </div>
+            <div id="tweets">
+                <h3>Tweets</h3>
+                <ul>
+                    {{#each App.tweetsController}}
+                        <li>
+                            <img {{bindAttr src="avatar"}} />
+                            <span>{{date}}</span>
+                            <h3>{{screen_name}}</h3>
+                            <p>{{text}}</p>
+                        </li>
+                    {{/each}}
+                </ul>
+            </div>
+        </div>
+    </script>
 
   <!-- The missing protocol means that it will match the current protocol, either http or https. If running locally, we use the local jQuery. -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.2.min.js"><\/script>')</script>
   <script src="js/libs/handlebars-1.0.0.beta.6.js"></script>
   <script src="js/libs/ember-1.0.pre.min.js"></script>
